--- a/section_02/exercise_11.html
+++ b/section_02/exercise_11.html
@@ -1,5 +1,5 @@
-THE ADVENTURES OF SHERLOCK HOLMES
+<h1>THE ADVENTURES OF SHERLOCK HOLMES</h1>
 
-by
+<h2>by</h2>
 
-Arthur Conan Doyle
+<h3>Arthur Conan Doyle</h3>
