--- a/section_02/exercise_11.html
+++ b/section_02/exercise_11.html
@@ -1,7 +1,11 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements -->
 <!-- https://devdocs.io/html/element/heading_elements -->
-<h1>THE ADVENTURES OF SHERLOCK HOLMES</h1>
-<br />
-<h2>by</h2>
-<br />
-<h3>Arthur Conan Doyle</h3>
+<center>
+  <hr size="3" noshade />
+  <h1>THE ADVENTURES OF<br />SHERLOCK HOLMES</h1>
+  <br />
+  <h2>by</h2>
+  <br />
+  <h3>Arthur Conan Doyle</h3>
+  <hr size="3" noshade />
+</center>
