complete HTML personal prosite exercises through video 16

--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -19,9 +19,39 @@
     While I am a technical person, I find my greatest strength is interfacing with non-technical users and bridging the gap between their problems to the ultimate solutions that meet their needs. To that end, I spend much of my time in front of
     business people, from top level executives down the value chain, helping to get insights into their needs and find appropriate and efficient technological solutions.
   </p>
-<hr />
-<h3>Education</h3>
-
+  <hr />
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul -->
+  <h3>Education</h3>
+  <ul>
+    <li>
+      The Complete 2020 Web Development Bootcamp
+    </li>
+    <li>
+      iOS 11 & Swift 4 - The Complete iOS App Development Bootcamp
+    </li>
+    <li>
+      Core Data and Realm - Master Data Persistence for iOS
+    </li>
+    <li>
+      The Complete 2020 Flutter Development Bootcamp with Dart
+    </li>
+  </ul>
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol -->
+  <h3>My Hobbies</h3>
+  <ol>
+    <li>
+      Studying current and extinct programming languages and operating systems
+    </li>
+    <li>
+      Paleontology and archaeology
+    </li>
+    <li>
+      Machine learning, statistical programming, and modeling
+    </li>
+    <li>
+      Teaching kids to code
+    </li>
+  </ol>
 </body>
 
 </html>
