complete HTML personal site with image exercise through lesson 17

--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img -->
+  <!-- https://resize.imageonline.co/ -->
+  <!-- https://crop-circle.imageonline.co/ -->
+  <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)" >
   <h1>Allen Hammock</h1>
   <p><em>Director, Search Strategy</em></p>
   <p>
