complete HTML Personal ProSite for Section 2, lessons 11-18

--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -14,7 +14,7 @@
   <!-- https://crop-circle.imageonline.co/ -->
   <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)" >
   <h1>Allen Hammock</h1>
-  <p><em>Director, Search Strategy</em></p>
+  <p><em>Director, Search Strategy (<a href="https://www.kenshoo.com">Kenshoo</a>)</em></p>
   <p>
     I have 20 years of experience in digital advertising technology, from display advertising to paid search and mobile applications. I have a very strong technical background, working as an individual contributor to engineering efforts while also
     serving in a management capacity to organize and inspire product and engineering teams.
@@ -28,34 +28,20 @@
   <h3>Education</h3>
   <ul>
     <li>
-      The Complete 2020 Web Development Bootcamp
+      <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp">The Complete 2020 Web Development Bootcamp</a>
     </li>
     <li>
-      iOS 11 & Swift 4 - The Complete iOS App Development Bootcamp
+      <a href="https://www.udemy.com/course/ios11-app-development-bootcamp">iOS 11 & Swift 4 - The Complete iOS App Development Bootcamp</a>
     </li>
     <li>
-      Core Data and Realm - Master Data Persistence for iOS
+      <a href="https://www.udemy.com/course/core-data-and-realm-database/learn/lecture">Core Data and Realm - Master Data Persistence for iOS</a>
     </li>
     <li>
-      The Complete 2020 Flutter Development Bootcamp with Dart
+      <a href="https://www.udemy.com/course/flutter-bootcamp-with-dart/">The Complete 2020 Flutter Development Bootcamp with Dart</a>
     </li>
   </ul>
-  <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol -->
-  <h3>My Hobbies</h3>
-  <ol>
-    <li>
-      Studying current and extinct programming languages and operating systems
-    </li>
-    <li>
-      Paleontology and archaeology
-    </li>
-    <li>
-      Machine learning, statistical programming, and modeling
-    </li>
-    <li>
-      Teaching kids to code
-    </li>
-  </ol>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">Contact Me</a>
 </body>
 
 </html>
