save and push my hobbies page in personal web site project, section 2

--- a/projects/html_personal_site/hobbies.html
+++ b/projects/html_personal_site/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Hobbies</title>
+    <title>My <Hobbies></Hobbies></title>
   </head>
   <body>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol -->
