complete lesson 20 in sectin 3

--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -12,7 +12,7 @@
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img -->
   <!-- https://resize.imageonline.co/ -->
   <!-- https://crop-circle.imageonline.co/ -->
-  <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)" >
+  <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)">
   <h1>Allen Hammock</h1>
   <p><em>Director, Search Strategy (<a href="https://www.kenshoo.com">Kenshoo</a>)</em></p>
   <p>
@@ -40,6 +40,38 @@
       <a href="https://www.udemy.com/course/flutter-bootcamp-with-dart/">The Complete 2020 Flutter Development Bootcamp with Dart</a>
     </li>
   </ul>
+<!-- https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics -->
+  <h3>Work Experience</h3>
+  <table>
+    <thead>
+      <tr>
+        <td>
+          Dates
+        </td>
+        <td>
+          Work
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          February 2019 - Present
+        </td>
+        <td>
+          Director, Search Strategy
+        </td>
+      </tr>
+      <tr>
+        <td>
+          July 2014 - January 2019
+        </td>
+        <td>
+          Solutions Consultant
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact-me.html">Contact Me</a>
 </body>
