--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -12,17 +12,27 @@
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img -->
   <!-- https://resize.imageonline.co/ -->
   <!-- https://crop-circle.imageonline.co/ -->
-  <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)">
-  <h1>Allen Hammock</h1>
-  <p><em>Director, Search Strategy (<a href="https://www.kenshoo.com">Kenshoo</a>)</em></p>
-  <p>
-    I have 20 years of experience in digital advertising technology, from display advertising to paid search and mobile applications. I have a very strong technical background, working as an individual contributor to engineering efforts while also
-    serving in a management capacity to organize and inspire product and engineering teams.
-  </p>
-  <p>
-    While I am a technical person, I find my greatest strength is interfacing with non-technical users and bridging the gap between their problems to the ultimate solutions that meet their needs. To that end, I spend much of my time in front of
-    business people, from top level executives down the value chain, helping to get insights into their needs and find appropriate and efficient technological solutions.
-  </p>
+  <table cellspacing="20">
+    <tr>
+      <td valign="top">
+        <img src="images/brainvat-circle-cropped-small.png" alt="Allen Hammock (@brainvat on Twitter)">
+
+      </td>
+      <td>
+        <h1>Allen Hammock</h1>
+        <p><em>Director, Search Strategy (<a href="https://www.kenshoo.com">Kenshoo</a>)</em></p>
+        <p>
+          I have 20 years of experience in digital advertising technology, from display advertising to paid search and mobile applications. I have a very strong technical background, working as an individual contributor to engineering efforts while
+          also
+          serving in a management capacity to organize and inspire product and engineering teams.
+        </p>
+        <p>
+          While I am a technical person, I find my greatest strength is interfacing with non-technical users and bridging the gap between their problems to the ultimate solutions that meet their needs. To that end, I spend much of my time in front of
+          business people, from top level executives down the value chain, helping to get insights into their needs and find appropriate and efficient technological solutions.
+        </p>
+      </td>
+    </tr>
+  </table>
   <hr />
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul -->
   <h3>Education</h3>
@@ -40,7 +50,7 @@
       <a href="https://www.udemy.com/course/flutter-bootcamp-with-dart/">The Complete 2020 Flutter Development Bootcamp with Dart</a>
     </li>
   </ul>
-<!-- https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics -->
+  <!-- https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics -->
   <h3>Work Experience</h3>
   <table>
     <thead>
