complete HTML tables code challenge in lesson 22

--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -52,15 +52,15 @@
   </ul>
   <!-- https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Basics -->
   <h3>Work Experience</h3>
-  <table>
+  <table border="1">
     <thead>
       <tr>
-        <td>
+        <th>
           Dates
-        </td>
-        <td>
+        </th>
+        <th>
           Work
-        </td>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -81,6 +81,51 @@
         </td>
       </tr>
     </tbody>
+  </table>
+  <h3>Skills</h3>
+  <table>
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <td>
+              iOS Development
+            </td>
+            <td>
+              ★★★★
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Web Development
+            </td>
+            <td>
+              ★★★★★
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <td>
+              R Programming
+            </td>
+            <td>
+              ★★★
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Calculus
+            </td>
+            <td>
+              ★★★★
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
   </table>
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact-me.html">Contact Me</a>
