--- a/projects/dom_challenge/index.html
+++ b/projects/dom_challenge/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css">
 
-    <h1>Hello</h1>
+</head>
 
-    <input type="checkbox">
+<body>
 
-    <button style=":active color:red;">Click Me</button>
+  <h1>Hello</h1>
 
-    <ul>
-      <li class="list">
-        <a href="https://www.google.com">Google</a>
-      </li>
-      <li class="list">Second</li>
-      <li class="list">Third</li>
-    </ul>
+  <input type="checkbox">
 
-  </body>
+  <button style=":active color:red;">Click Me</button>
+
+  <ul>
+    <li class="list">
+      <a href="https://www.google.com">Google</a>
+    </li>
+    <li class="list">Second</li>
+    <li class="list">Third</li>
+  </ul>
+  <script type="text/javascript" src="index.js"></script>
+</body>
 
 </html>
