complete CSS exercises for inline, internal and external styles in lessons 34, 35 and 36

--- a/projects/dom_challenge/index.html
+++ b/projects/dom_challenge/index.html
@@ -21,7 +21,7 @@
       <a href="https://www.google.com">Google</a>
     </li>
     <li class="list">Second</li>
-    <li class="list">Third</li>
+    <li class="list">Third</li>g
   </ul>
   <script type="text/javascript" src="index.js"></script>
 </body>
