--- a/projects/html_personal_site/index.html
+++ b/projects/html_personal_site/index.html
@@ -5,9 +5,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="HTML Personal Site Project for Udemy Webdev 2020 Bootcamp">
+  <link rel="stylesheet" href="styles/index.css">
   <title>Brainvat's Personal Site</title>
 </head>
 
+<!-- https://developer.mozilla.org/en-US/docs/Web/CSS/background-color -->
+<!-- https://colorhunt.co/palette/177317 -->
+<!-- https://www.w3schools.com/cssref/css_colors.asp -->
+<!-- https://developer.mozilla.org/en-US/docs/Web/CSS/color -->
 <body>
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img -->
   <!-- https://resize.imageonline.co/ -->
