--- a/projects/html_personal_site/hobbies.html
+++ b/projects/html_personal_site/hobbies.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/index.css">
     <title>My <Hobbies></Hobbies></title>
   </head>
   <body>
