--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="icon" href="favicon.ico">
   <title>My Professional Site</title>
 </head>
 
