complete exercise in lesson 45

--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -44,7 +44,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>Â© 2018 Name Surname.</p>
+    <p>© 2018 Name Surname.</p>
   </div>
 
 </body>
