complete CSS exercises in professional site through lesson 51

--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -7,9 +7,17 @@
   <link rel="icon" href="favicon.ico">
   <title>My Professional Site</title>
 </head>
-
+<!-- http://markusvogl.com/web1/interactive_box_model/css_box_demo.html -->
 <body>
-
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Brainvat</h1>
+    <p>
+      I'm a <span class="pro-span">pro</span>grammer.
+    </p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
   <div class="middle-container">
     <div class="profile">
       <img src="" alt="">
