update professional website project with Google Fonts

--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles/index.css">
   <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   <title>My Professional Site</title>
 </head>
 <!-- http://markusvogl.com/web1/interactive_box_model/css_box_demo.html -->
