updat content and images for professional web site project

--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -9,6 +9,7 @@
   <title>My Professional Site</title>
 </head>
 <!-- http://markusvogl.com/web1/interactive_box_model/css_box_demo.html -->
+
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
@@ -21,39 +22,43 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="" alt="">
+      <img src="images/brainvat-circle-cropped.png" alt="Brainvat">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>This web site is an assignment for the Web Development 2020 Boot Camp course taught by Angela Yu of the London App Brewery.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <img class="" src="images/my-icons-collection/png/003-computer.png" alt="Computer Programming">
+        <h3>Computer Programming</h3>
+        <p>I am able to read and interpret code in over a dozen languages including modern dialects like JavaScript, Swift, Objective-C and DART as well as some older more obscure types such as Smalltalk.  LISP still largely escapes me.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="" src="images/my-icons-collection/png/001-report.png" alt="Data Science">
+        <h3>Data Science</h3>
+        <p>While I don't have the full skills of a professional data scientist, I do have a strong background in statistics and mathematics, computer programming, and a deep business domain knowledge of digital advertising and very broad knowledge of modern deep learning approaches.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>Find me on Linked In!</h3>
+      <p>If you're trying to contact me professionally, look me up on <a href="https://www.linkedin.com/in/ahammock">Linked In.</a></p>
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
   </div>
 
-
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2018 Name Surname.</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/ahammock">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/brainvat">Twitter</a>
+    <a class="footer-link" href="https://github.com/brainvat">Github</a>
+    <p>© 2020 Brainvat</p>
+  </div>
+
+  <div class="bottom-attribution">
+    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </div>
 
 </body>
