complete professional web site CSS exercises in lessons 43-65

--- a/projects/html_professional_site/index.html
+++ b/projects/html_professional_site/index.html
@@ -13,29 +13,29 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Brainvat</h1>
-    <p>
-      I'm a <span class="pro-span">pro</span>grammer.
-    </p>
+    <h1>I am Brainvat</h1>
+    <h2>
+      a <span class="pro-span">pro</span>grammer.
+    </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/brainvat-circle-cropped.png" alt="Brainvat">
+      <img class="image-me" src="images/brainvat-circle-cropped.png" alt="Brainvat">
       <h2>Hello.</h2>
-      <p>This web site is an assignment for the Web Development 2020 Boot Camp course taught by Angela Yu of the London App Brewery.</p>
+      <p class="profile-text">This web site is an assignment for the Web Development 2020 Boot Camp course taught by Angela Yu of the London App Brewery.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="images/my-icons-collection/png/003-computer.png" alt="Computer Programming">
+        <img class="skill-image-left" src="images/my-icons-collection/png/003-computer.png" alt="Computer Programming">
         <h3>Computer Programming</h3>
         <p>I am able to read and interpret code in over a dozen languages including modern dialects like JavaScript, Swift, Objective-C and DART as well as some older more obscure types such as Smalltalk.  LISP still largely escapes me.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/my-icons-collection/png/001-report.png" alt="Data Science">
+        <img class="skill-image-right" src="images/my-icons-collection/png/001-report.png" alt="Data Science">
         <h3>Data Science</h3>
         <p>While I don't have the full skills of a professional data scientist, I do have a strong background in statistics and mathematics, computer programming, and a deep business domain knowledge of digital advertising and very broad knowledge of modern deep learning approaches.</p>
       </div>
@@ -53,7 +53,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/ahammock">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/brainvat">Twitter</a>
     <a class="footer-link" href="https://github.com/brainvat">Github</a>
-    <p>© 2020 Brainvat</p>
+    <p class="copyright">© 2020 Brainvat</p>
   </div>
 
   <div class="bottom-attribution">
