add hamburger menu bootstrap code per lesson 69

--- a/projects/bootstrap_local/index.html
+++ b/projects/bootstrap_local/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,9 +10,30 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 </head>
+
 <body>
   <!-- https://www.submarinecablemap.com/ -->
-  <h1>Hello, world!</h1>
+  <!-- https://getbootstrap.com/docs/4.3/components/navbar/ -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">tindog</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarToggleMenu">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a href="" class="nav-link">Download</a>
+        </li>
+      </ul>
+
+    </div>
+  </nav>
 
   <!-- Optional JavaScript -->
   <!--
@@ -22,4 +44,5 @@
   <script type="text/javascript" src="bootstrap-4.3.1/dist/js/bootstrap.css"></script>
 
 </body>
+
 </html>
