--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,9 +14,26 @@
 
     <!-- Nav Bar -->
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarToggleMenu">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Download</a>
+          </li>
+        </ul>
 
+      </div>
 
-
+    </nav>
     <!-- Title -->
 
     <div>
