--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -37,6 +37,23 @@
     </nav>
     <!-- Title -->
 
+    <!-- lesson 73 -->
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
+      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
+    </div>
+
     <div>
       <h1>Meet new and interesting dogs nearby.</h1>
       <button type="button">Download</button>
