--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -14,7 +14,7 @@
 
     <!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a href="" class="navbar-brand">tindog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,31 +37,16 @@
     </nav>
     <!-- Title -->
 
-    <!-- lesson 73 -->
-    <div class="row">
-      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
-      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
-      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
-      <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow; border: 1px solid"> col-lg-3 col-md-4 col-sm-6 </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-      <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: green; border: 1px solid"> col-lg-2 col-md-3 col-sm-12 </div>
-    </div>
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
+<div class="row">
+  <div class="col-md-6">
+    <h1>Meet new and interesting dogs nearby.</h1>
+    <button type="button">Download</button>
+    <button type="button">Download</button>
+  </div>
+  <div class="col-md-6">
+    <img src="images/iphone6.png" alt="iphone-mockup">
+  </div>
+</div>
 
   </section>
 
