embed Ubuntu and Montserrat fonts from Google Fonts into stylesheet per challenge in lesson 75

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -37,16 +38,16 @@
     </nav>
     <!-- Title -->
 
-<div class="row">
-  <div class="col-md-6">
-    <h1>Meet new and interesting dogs nearby.</h1>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-  </div>
-  <div class="col-md-6">
-    <img src="images/iphone6.png" alt="iphone-mockup">
-  </div>
-</div>
+    <div class="row">
+      <div class="col-lg-6">
+        <h1>Meet new and interesting dogs nearby.</h1>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
+      <div class="col-lg-6">
+        <img src="images/iphone6.png" alt="iphone-mockup">
+      </div>
+    </div>
 
   </section>
 
