fix non-bolding H1 problem in lesson 75

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
+  <!-- https://stackoverflow.com/questions/52958461/flash-of-unstyled-text-when-switching-fonts-on-a-loaded-page -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900|Open+Sans|Ubuntu&display=swap">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -144,7 +145,7 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>&copy; Copyright 2018 TinDog</p>
 
   </footer>
 
