complete container exercise from lesson 77

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -14,29 +14,32 @@
 
   <section id="title">
 
-    <!-- Nav Bar -->
+    <div class="container-fluid">
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a href="" class="navbar-brand">tindog</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggleMenu">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="" class="nav-link">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Download</a>
-          </li>
-        </ul>
+      <!-- Nav Bar -->
 
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a href="" class="navbar-brand">tindog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggleMenu">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Download</a>
+            </li>
+          </ul>
 
-    </nav>
+        </div>
+
+      </nav>
+
     <!-- Title -->
 
     <div class="row">
@@ -49,11 +52,23 @@
         <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
+  </div>
 
   </section>
 
 
   <!-- Features -->
+  <!-- https://loremipsum.io/ -->
+
+  <div class="container" style="background-color: red;">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </div>
+
+  <div class="container-fluid" style="background-color: yellow;">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </div>
 
   <section id="features">
 
