complete title and hero shot styling for lesson 79

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -45,13 +45,13 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="title-h1">Meet new and interesting dogs nearby.</h1>
           <!-- https://getbootstrap.com/docs/4.0/components/buttons/ -->
-          <button type="button" class="btn btn-dark btn-lg"><i class="fa fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-apple"></i> App Store</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Play Store</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
