complete Bootstrap Challenge 1 from lesson 80 before watching solution

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -60,31 +60,32 @@
 
 
   <!-- Features -->
-  <!-- https://loremipsum.io/ -->
-
-  <div class="container" style="background-color: red;">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
-
-  <div class="container-fluid" style="background-color: yellow;">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 feature-col">
+          <i class="fas fa-check-circle feature-icon"></i>
+          <h3 class="feature-h3">Easy to use.</h3>
+          <p class="feature-p">So easy to use, even your dog could do it.</p>
+        </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+        <div class="col-lg-4 feature-col">
+          <i class="fas fa-bullseye feature-icon"></i>
+          <h3 class="feature-h3">Elite Clientele</h3>
+          <p class="feature-p">We have all the dogs, the greatest dogs.</p>
+        </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg-4 feature-col">
+          <i class="fas fa-heart feature-icon"></i>
+          <h3 class="feature-h3">Guaranteed to work.</h3>
+          <p class="feature-p">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
 
   </section>
-
 
   <!-- Testimonials -->
 
