initial styling for pricing based on Bootstrap card deck example

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -108,7 +108,7 @@
         <span class="carousel-control-prev-icon"></span>
         <!-- <span class="sr-only">Previous</span> -->
       </a>
-      <a href="#testimonial-carousel" class="carousel-control-next" role="button" data-slide"next">
+      <a href="#testimonial-carousel" class="carousel-control-next" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
         <!-- <span class="sr-only">Next</span> -->
       </a>
@@ -128,37 +128,52 @@
 
 
   <!-- Pricing -->
-
+  <!-- https://getbootstrap.com/docs/4.0/components/card/ -->
+  <!-- https://getbootstrap.com/docs/4.0/examples/pricing/ -->
   <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+    
+    <div class="card-deck mb-3 text-center">
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Chihuahua</h3>
+        </div>
+        <div class="card-body">
+          <h2>Free</h2>
+          <p>5 Matches Per Day</p>
+          <p>10 Messages Per Day</p>
+          <p>Unlimited App Usage</p>
+          <button type="button">Sign Up</button>
+        </div>
+      </div>
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Labrador</h3>
+        </div>
+        <div class="card-body">
+          <h2>$49 / mo</h2>
+          <p>Unlimited Matches</p>
+          <p>Unlimited Messages</p>
+          <p>Unlimited App Usage</p>
+          <button type="button">Sign Up</button>
+        </div>
+      </div>
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h3 class="my-0 font-weight-normal">Mastiff</h3>
+        </div>
+        <div class="card-body">
+          <h2>$99 / mo</h2>
+          <p>Pirority Listing</p>
+          <p>Unlimited Matches</p>
+          <p>Unlimited Messages</p>
+          <p>Unlimited App Usage</p>
+          <button type="button">Sign Up</button>
+        </div>
+      </div>
+    </div>
   </section>
 
 
