--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -132,56 +132,60 @@
   <!-- https://getbootstrap.com/docs/4.0/examples/pricing/ -->
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="pricing-h2">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-    
-    <div class="card-deck mb-3 text-center">
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h3 class="my-0 font-weight-normal">Chihuahua</h3>
-        </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messages Per Day</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
-        </div>
-      </div>
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h3 class="my-0 font-weight-normal">Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49 / mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+
+    <div class="row text-center">
+      <div class="pricing-col col-lg-4 col-md-6 col-sm-12">
+        <div class="card box-shadow">
+          <div class="card-header">
+            <h3 class="my-0 font-weight-normal">Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn btn-primary sign-up">Sign Up</a>
+          </div>
         </div>
       </div>
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h3 class="my-0 font-weight-normal">Mastiff</h3>
+      <div class="pricing-col col-lg-4 col-md-6 col-sm-12">
+        <div class="card box-shadow">
+          <div class="card-header">
+            <h3 class="my-0 font-weight-normal">Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn btn-primary sign-up">Sign Up</a>
+          </div>
         </div>
-        <div class="card-body">
-          <h2>$99 / mo</h2>
-          <p>Pirority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+      </div>
+      <div class="pricing-col col-lg-4 col-md-12">
+        <div class="card box-shadow">
+          <div class="card-header">
+            <h3 class="my-0 font-weight-normal">Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn btn-primary sign-up">Sign Up</a>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-
   <!-- Call to Action -->
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
