complete bootstrap exercises through lesson 90

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -186,17 +186,22 @@
   <section id="cta">
 
     <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-apple"></i> App Store</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Play Store</button>
 
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
 
-    <p>&copy; Copyright 2018 TinDog</p>
+    <p>
+      <i class="footer-icon fab fa-twitter-square"></i>
+      <i class="footer-icon fab fa-facebook-square"></i>
+      <i class="footer-icon fab fa-instagram-square"></i>
+      <i class="footer-icon fas fa-envelope-square"></i>  
+    </p>
+    <h3 class="footer-h3">&copy; Copyright 2020 TinDog</h3>
 
   </footer>
 
