refactor section background colors and font color styles

--- a/projects/tindog_bootstrap/index.html
+++ b/projects/tindog_bootstrap/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="color-section" id="title">
 
     <div class="container-fluid">
 
@@ -61,7 +61,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
     <div class="container-fluid">
       <div class="row">
@@ -89,7 +89,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="color-section" id="testimonials">
     <!-- https://getbootstrap.com/docs/4.0/components/carousel/ -->
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
@@ -118,7 +118,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="color-section" id="press">
     <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -130,7 +130,7 @@
   <!-- Pricing -->
   <!-- https://getbootstrap.com/docs/4.0/components/card/ -->
   <!-- https://getbootstrap.com/docs/4.0/examples/pricing/ -->
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="pricing-h2">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -183,7 +183,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="color-section" id="cta">
 
     <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-apple"></i> App Store</button>
@@ -193,13 +193,13 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
 
     <p>
       <i class="footer-icon fab fa-twitter-square"></i>
       <i class="footer-icon fab fa-facebook-square"></i>
       <i class="footer-icon fab fa-instagram-square"></i>
-      <i class="footer-icon fas fa-envelope-square"></i>  
+      <i class="footer-icon fas fa-envelope-square"></i>
     </p>
     <h3 class="footer-h3">&copy; Copyright 2020 TinDog</h3>
 
