complete Boss Challenge 1, Dicee Game section 12

--- a/projects/dicee_challenge/dicee.html
+++ b/projects/dicee_challenge/dicee.html
@@ -5,7 +5,6 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
   </head>
   <body>
 
@@ -14,12 +13,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img id="img1" class="img1" src="images/dice1.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img id="img2" class="img2" src="images/dice1.png">
       </div>
 
     </div>
@@ -30,4 +29,5 @@
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
+  <script src="index.js" type="text/javascript"></script>
 </html>
