final solution to simon challenge complete

--- a/projects/simon_challenge/index.html
+++ b/projects/simon_challenge/index.html
@@ -36,8 +36,8 @@
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- <script src="simon.js"></script> -->
-<script src="angela-game.js"></script>
+<script src="simon.js"></script>
+<!-- <script src="angela-game.js"></script> -->
 </body>
 
 </html>
