--- a/projects/keeper_react/public/index.html
+++ b/projects/keeper_react/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Keeper App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
-  </body>
+<head>
+  <title>Keeper App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="../src/index.js" type="text/jsx"></script>
+</body>
+
 </html>
