--- a/projects/keeper_react_node/public/index.html
+++ b/projects/keeper_react_node/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <title>Keeper App</title>
+  <title>Keeper</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/react-styles.css" />
+  <meta name="author" content="Allen Hammock"  />
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="../src/index.js" type="text/jsx"></script>
 </body>
 
 </html>
